// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PackageTitle renders with tags 1`] = `
<div
  class="flex-column"
>
  <h1
    class="gl-font-size-20-deprecated-no-really-do-not-use-me gl-mt-3 append-bottom-4"
  >
    
    Test package
  
  </h1>
   
  <div
    class="gl-display-flex gl-align-items-center text-secondary"
  >
    <gl-icon-stub
      class="gl-mr-3"
      name="eye"
      size="16"
    />
     
    <gl-sprintf-stub
      message="v%{version} published %{timeAgo}"
    />
  </div>
   
  <div
    class="gl-display-flex flex-wrap gl-align-items-center append-bottom-8"
  >
    <div
      class="gl-display-flex align-items-center gl-mr-5"
    >
      <gl-icon-stub
        class="text-secondary gl-mr-3"
        name="package"
        size="16"
      />
       
      <span
        class="font-weight-bold"
      >
        maven
      </span>
    </div>
     
    <div
      class="gl-display-flex gl-align-items-center gl-mr-5"
    >
      <package-tags-stub
        tagdisplaylimit="1"
        tags="[object Object],[object Object],[object Object],[object Object]"
      />
    </div>
     
    <!---->
     
    <!---->
     
    <div
      class="gl-display-flex gl-align-items-center gl-mr-5"
    >
      <gl-icon-stub
        class="text-secondary gl-mr-3"
        name="disk"
        size="16"
      />
       
      <span
        class="font-weight-bold"
      >
        300 bytes
      </span>
    </div>
  </div>
</div>
`;

exports[`PackageTitle renders without tags 1`] = `
<div
  class="flex-column"
>
  <h1
    class="gl-font-size-20-deprecated-no-really-do-not-use-me gl-mt-3 append-bottom-4"
  >
    
    Test package
  
  </h1>
   
  <div
    class="gl-display-flex gl-align-items-center text-secondary"
  >
    <gl-icon-stub
      class="gl-mr-3"
      name="eye"
      size="16"
    />
     
    <gl-sprintf-stub
      message="v%{version} published %{timeAgo}"
    />
  </div>
   
  <div
    class="gl-display-flex flex-wrap gl-align-items-center append-bottom-8"
  >
    <div
      class="gl-display-flex align-items-center gl-mr-5"
    >
      <gl-icon-stub
        class="text-secondary gl-mr-3"
        name="package"
        size="16"
      />
       
      <span
        class="font-weight-bold"
      >
        maven
      </span>
    </div>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <div
      class="gl-display-flex gl-align-items-center gl-mr-5"
    >
      <gl-icon-stub
        class="text-secondary gl-mr-3"
        name="disk"
        size="16"
      />
       
      <span
        class="font-weight-bold"
      >
        300 bytes
      </span>
    </div>
  </div>
</div>
`;
